# SpamDetection

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TESTING.md  agent.py  pyproject.toml
configs/: agent_config.toml
docs/: HLD.md  agent_instructions.md
src/: spam_classifier.py  telegram_notifier.py
tests/: conftest.py  test_agent.py  test_spam_classifier.py  test_telegram_notifier.py
