[project]
name = "sarvam-livekit-voice-agent"
version = "0.1.0"
description = "Minimal LiveKit voice agent with Sarvam STT/TTS and OpenAI LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[openai,sarvam,silero]~=1.4.5",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "python-dotenv>=1.2.2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
